--- a/index.html
+++ b/index.html
@@ -16,5 +16,6 @@
             element: document.querySelector('.editor'),
         })
     </script>
+    <p>see also: <a href='https://github.com/Bananattack/brewtool'>(source code)</a></p>
 </body>
 </html>
