--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset='utf-8' />
     <title>brewtool</title>
     <link rel='stylesheet' type='text/css' href='editor.css'>
+    <script type='text/javascript' src='chr.js'></script>
     <script type='text/javascript' src='editor.js'></script>
 </head>
 <body class='page'>
