--- a/index.html
+++ b/index.html
@@ -3,20 +3,15 @@
 <head>
     <meta charset='utf-8' />
     <title>brewtool</title>
-    <link rel='stylesheet' type='text/css' href='editor.css'>
-    <script type='text/javascript' src='chr.js'></script>
-    <script type='text/javascript' src='editor.js'></script>
+    <link rel='stylesheet' type='text/css' href='css/editor.css'>
 </head>
 <body class='page'>
-    <h1>brewtool</h1>
+    <h1><a href='../index.html'>brewtool</a></h1>
     <h2>by Andrew G. Crowell</h2>
-    <p>A handy tool for viewing Game Boy and NES tilesets (.chr files). It can also convert images into these formats!</p>
-    <div class='editor'></div>
-    <script type='text/javascript'>
-        editor.init({
-            element: document.querySelector('.editor'),
-        })
-    </script>
+    <p>A collection of primitive editor/converter tools for making assets used with homebrew ROM development. These are going to be mashed together pretty haphazardly. The goal is low-effort UI that just gets the job done.</p>
+    <ul>
+        <li><a href='chr/index.html'>CHR Tool</a> &mdash; For viewing .chr files, as well as importing/exporting low-color images</li>
+    </ul>
     <p>see also: <a href='https://github.com/Bananattack/brewtool'>(source code)</a></p>
 </body>
 </html>
