--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel='stylesheet' type='text/css' href='css/editor.css'>
 </head>
 <body class='page'>
-    <h1><a href='../index.html'>brewtool</a></h1>
+    <h1><a href='index.html'>brewtool</a></h1>
     <h2>by Andrew G. Crowell</h2>
     <p>A collection of primitive editor/converter tools for making assets used with homebrew ROM development. These are going to be mashed together pretty haphazardly. The goal is low-effort UI that just gets the job done.</p>
     <ul>
