--- a/chr/index.html
+++ b/chr/index.html
@@ -2,14 +2,14 @@
 <html>
 <head>
     <meta charset='utf-8' />
-    <title>brewtool</title>
+    <title>brewtool - CHR Tool</title>
     <link rel='stylesheet' type='text/css' href='../css/editor.css'>
     <script type='text/javascript' src='../js/chr.js'></script>
     <script type='text/javascript' src='../js/chreditor.js'></script>
 </head>
 <body class='page'>
-    <h1><a href='../index.html'>brewtool</a></h1>
-    <h2>by Andrew G. Crowell</h2>
+    <h1><a href='index.html'>brewtool</a></h1>
+    <h2>CHR Tool &mdash; by Andrew G. Crowell</h2>
     <p>A handy tool for viewing Game Boy and NES tilesets (.chr files). It can also convert images into these formats!</p>
     <div class='editor'></div>
     <script type='text/javascript'>
