--- a/chr/index.html
+++ b/chr/index.html
@@ -8,7 +8,7 @@
     <script type='text/javascript' src='../js/chreditor.js'></script>
 </head>
 <body class='page'>
-    <h1><a href='index.html'>brewtool</a></h1>
+    <h1><a href='../index.html'>brewtool</a></h1>
     <h2>CHR Tool &mdash; by Andrew G. Crowell</h2>
     <p>A handy tool for viewing Game Boy and NES tilesets (.chr files). It can also convert images into these formats!</p>
     <div class='editor'></div>
