Palette importing thingy

--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
     <h2>by Andrew G. Crowell</h2>
     <p>A collection of primitive editor/converter tools for making assets used with homebrew ROM development. These are going to be mashed together pretty haphazardly. The goal is low-effort UI that just gets the job done.</p>
     <ul>
-        <li><a href='chr/index.html'>CHR Tool</a> &mdash; For viewing .chr files, as well as importing/exporting low-color images</li>
+        <li><a href='chr/index.html'>CHR Tool</a> &mdash; For viewing .chr files, as well as importing/exporting low-color images.</li>
+        <li><a href='pal/index.html'>PAL Tool</a> &mdash; For extracting 15-bit RGB palettes from images.</li>
     </ul>
     <p>see also: <a href='https://github.com/Bananattack/brewtool'>(source code)</a></p>
 </body>
