--- a/pal/index.html
+++ b/pal/index.html
@@ -9,7 +9,7 @@
 <body class='page'>
     <h1><a href='../index.html'>brewtool</a></h1>
     <h2>PAL Tool &mdash; by Andrew G. Crowell</h2>
-    <p>For extracting 15-bit RGB palettes from images.</p>
+    <p>For extracting 15-bit RGB palettes from images. Unique rows within an image, of up to 4 colors, become their own palette.</p>
     <div class='editor'></div>
     <script type='text/javascript'>
         editor.init({
