Reorganize a little bit. There will be a common lib for both palette and tileset editing soon.

--- a/pal/index.html
+++ b/pal/index.html
@@ -4,6 +4,7 @@
     <meta charset='utf-8' />
     <title>brewtool - PAL Tool</title>
     <link rel='stylesheet' type='text/css' href='../css/editor.css'>
+    <script type='text/javascript' src='../js/brewtool.js'></script>
     <script type='text/javascript' src='../js/paleditor.js'></script>
 </head>
 <body class='page'>
