--- a/chr/index.html
+++ b/chr/index.html
@@ -4,7 +4,7 @@
     <meta charset='utf-8' />
     <title>brewtool - CHR Tool</title>
     <link rel='stylesheet' type='text/css' href='../css/editor.css'>
-    <script type='text/javascript' src='../js/chr.js'></script>
+    <script type='text/javascript' src='../js/brewtool.js'></script>
     <script type='text/javascript' src='../js/chreditor.js'></script>
 </head>
 <body class='page'>
