horrible WIP sprite creator

--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
     <p>A collection of primitive editor/converter tools for making assets used with homebrew ROM development. These are going to be mashed together pretty haphazardly. The goal is low-effort UI that just gets the job done.</p>
     <ul>
         <li><a href='chr/index.html'>CHR Tool</a> &mdash; For viewing .chr files, as well as importing/exporting low-color images.</li>
-        <li><a href='pal/index.html'>PAL Tool</a> &mdash; For extracting 15-bit RGB palettes from images.</li>
+        <li><a href='pal/index.html'>Palette Tool</a> &mdash; For extracting 15-bit RGB palettes from images.</li>
+        <li><a href='spr/index.html'>Sprite Tool</a> &mdash; For building sprites, using .chr and .pal files.</li>
     </ul>
     <p>see also: <a href='https://github.com/Bananattack/brewtool'>(source code)</a></p>
 </body>
