--- a/spr/index.html
+++ b/spr/index.html
@@ -2,15 +2,15 @@
 <html>
 <head>
     <meta charset='utf-8' />
-    <title>brewtool - Palette Tool</title>
+    <title>brewtool - Sprite Tool</title>
     <link rel='stylesheet' type='text/css' href='../css/editor.css'>
     <script type='text/javascript' src='../js/brewtool.js'></script>
-    <script type='text/javascript' src='../js/paleditor.js'></script>
+    <script type='text/javascript' src='../js/spreditor.js'></script>
 </head>
 <body class='page'>
     <h1><a href='../index.html'>brewtool</a></h1>
-    <h2>Palette Tool &mdash; by Andrew G. Crowell</h2>
-    <p>For extracting 15-bit RGB palettes from images. Unique rows within an image, of up to 4 colors, become their own palette.</p>
+    <h2>Sprite Tool &mdash; by Andrew G. Crowell</h2>
+    <p>For building sprites, using .chr and .pal files.</p>
     <div class='editor'></div>
     <script type='text/javascript'>
         editor.init({
