Change index page

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
         <li><a href='chr/index.html'>CHR Tool</a> &mdash; For viewing .chr files, as well as importing/exporting low-color images.</li>
         <li><a href='pal/index.html'>Palette Tool</a> &mdash; For extracting 15-bit RGB palettes from images.</li>
         <li><a href='spr/index.html'>Sprite Tool</a> &mdash; For building sprites, using .chr and .pal files.</li>
+        <li><a href='map/index.html'>Map Tool</a> &mdash; For automatically extracting tile maps, .chr and .pal files from images that adhere to GBC specs.</li>
     </ul>
     <p>see also: <a href='https://github.com/Bananattack/brewtool'>(source code)</a></p>
 </body>
